AGI/bin/errorLog.txt
/home/agi/Desktop/eclipse/AGI/bin/TestClassName.java:12: error: not a statement
block0 else 
^
/home/agi/Desktop/eclipse/AGI/bin/TestClassName.java:12: error: ';' expected
block0 else 
      ^
/home/agi/Desktop/eclipse/AGI/bin/TestClassName.java:12: error: 'else' without 'if'
block0 else 
       ^
3 errors
